--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "sass": "^1.57.1",
+    "stream": "^0.0.2",
+    "timers": "^0.1.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
